// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests different variations of <ClassComponent> Renders ClassComponent with a numerical room 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "height": 75,
      "justifyContent": "center",
      "padding": 10,
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "alignContent": "stretch",
        "flexDirection": "row",
        "flexWrap": "nowrap",
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#A0A0A0",
            "fontSize": 25,
            "fontWeight": "bold",
          },
          Object {
            "color": "red",
          },
        ]
      }
    >
      Class
    </Text>
    <Text
      style={
        Object {
          "color": "#808080",
        }
      }
    >
      12:14
       - 
      1:24 PM
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "alignContent": "stretch",
          "flexDirection": "row",
          "flexWrap": "nowrap",
          "justifyContent": "space-between",
        },
        Object {
          "marginTop": 5,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
          },
          Object {
            "flex": 1,
            "textAlign": "left",
          },
        ]
      }
    >
      <Text
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#808080",
            },
            Object {
              "flex": 1,
              "textAlign": "left",
            },
          ]
        }
      >
        Mr. Teacher Man
      </Text>
    </View>
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
          },
          Object {
            "flex": 1,
            "textAlign": "right",
          },
        ]
      }
    >
      <Text
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#808080",
            },
            Object {
              "flex": 1,
              "textAlign": "right",
            },
          ]
        }
      >
        Office
      </Text>
    </View>
  </View>
</View>
`;

exports[`Tests different variations of <ClassComponent> Renders ClassComponent with a string room 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "height": 75,
      "justifyContent": "center",
      "padding": 10,
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "alignContent": "stretch",
        "flexDirection": "row",
        "flexWrap": "nowrap",
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#A0A0A0",
            "fontSize": 25,
            "fontWeight": "bold",
          },
          Object {
            "color": "red",
          },
        ]
      }
    >
      Class
    </Text>
    <Text
      style={
        Object {
          "color": "#808080",
        }
      }
    >
      7:30
       - 
      8:30 AM
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "alignContent": "stretch",
          "flexDirection": "row",
          "flexWrap": "nowrap",
          "justifyContent": "space-between",
        },
        Object {
          "marginTop": 5,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
          },
          Object {
            "flex": 1,
            "textAlign": "left",
          },
        ]
      }
    >
      <Text
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#808080",
            },
            Object {
              "flex": 1,
              "textAlign": "left",
            },
          ]
        }
      >
        Mr. Teacher Man
      </Text>
    </View>
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
          },
          Object {
            "flex": 1,
            "textAlign": "right",
          },
        ]
      }
    >
      <Text
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#808080",
            },
            Object {
              "flex": 1,
              "textAlign": "right",
            },
          ]
        }
      >
        Office
      </Text>
    </View>
  </View>
</View>
`;
